--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "name",
-    "productName": "Name Here",
+    "name": "tictactoe",
+    "productName": "Tic Tac Toe",
     "version": "1.0.0",
-    "description": "My Electron application description",
+    "description": "TicTacToe Minimax App",
     "main": "src/index.js",
     "scripts": {
         "start": "electron-forge start",
         "package": "electron-forge package",
         "make": "electron-forge make",
-        "publish": "electron-forge publish"
+        "publish": "electron-forge publish --always"
     },
     "keywords": [],
     "author": {
@@ -44,6 +44,7 @@
         }
     },
     "dependencies": {
+        "electron-builder": "^22.11.1",
         "electron-is-packaged": "^1.0.2",
         "electron-squirrel-startup": "^1.0.0"
     },
